# node

./: .gitignore  README.md  biome.json  commitlint.config.js  package.json  pnpm-lock.yaml
.github/: CONTRIBUTING.md
agent/: Cargo.toml  README.md  build.sh
agent/.cargo/: config.toml
agent/src/: main.rs
agent/src/data_processor/: mod.rs  store.rs  subscribe.rs
agent/src/helper/: config.rs  constants.rs  error.rs  metrics.rs  mod.rs  path.rs
agent/src/ipc/: http.rs  mod.rs  process.rs  tcp.rs  uds.rs
agent/src/ipc/http/: common.rs  http.rs  mod.rs
agent/src/ipc/http/endpoints/: heartbeat.rs  info.rs  mod.rs  update_process.rs
agent/src/marco/: log.rs  mod.rs
app/react-19/: package.json
app/react-19/src/: App.tsx
demos/: listen_server.mjs
scripts/: prebuild.js
