[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# 二进制文件配置
[[bin]]
name = "mitojs-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

# 发布配置优化
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 跨平台编译目标配置
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-unknown-linux-gnu]
linker = "gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.x86_64-apple-darwin]
linker = "cc"

[target.aarch64-apple-darwin]
linker = "cc"
